WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225649
REGRESSION(
r277083
): Proximity scroll snap is broken on iOS
https://bugs.webkit.org/show_bug.cgi?id=225649
Summary
REGRESSION(r277083): Proximity scroll snap is broken on iOS
Martin Robinson
Reported
2021-05-11 04:28:15 PDT
Instead of respecting the proximity setting, scroll snap always uses the mandatory setting.
Attachments
Patch
(2.91 KB, patch)
2021-05-11 06:13 PDT
,
Martin Robinson
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(2.90 KB, patch)
2021-05-11 06:37 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2021-05-11 06:13:53 PDT
Created
attachment 428267
[details]
Patch
Martin Robinson
Comment 2
2021-05-11 06:37:12 PDT
Created
attachment 428270
[details]
Patch
Simon Fraser (smfr)
Comment 3
2021-05-11 10:40:44 PDT
Comment on
attachment 428270
[details]
Patch Please check the failing tests.
Martin Robinson
Comment 4
2021-05-12 01:00:17 PDT
Comment on
attachment 428270
[details]
Patch Thanks for the review! It looks like all the EWS bubbles are green so I'm going to land this one.
EWS
Comment 5
2021-05-12 01:09:15 PDT
Committed
r277362
(
237620@main
): <
https://commits.webkit.org/237620@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 428270
[details]
.
Radar WebKit Bug Importer
Comment 6
2021-05-12 01:10:16 PDT
<
rdar://problem/77889995
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug