REGRESSION(r277083): Proximity scroll snap is broken on iOS https://bugs.webkit.org/show_bug.cgi?id=225649

Patch by Martin Robinson <mrobinson@igalia.com> on 2021-05-12
Reviewed by Simon Fraser.

No new tests. iOS does not have great support for the event sending test
infrastructure used to test scroll snap.

* Shared/RemoteLayerTree/RemoteScrollingCoordinatorTransaction.cpp:
(ArgumentCoder<FloatScrollSnapOffsetsInfo>::encode): Include the snap type when encoding ScrollSnapOffsetsInfo.
(ArgumentCoder<FloatScrollSnapOffsetsInfo>::decode): Include the snap type when decoding ScrollSnapOffsetsInfo.
* Shared/WebCoreArgumentCoders.h: Added EnumTraits for ScrollSnapStrictness.

Canonical link: https://commits.webkit.org/237620@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277362 268f45cc-cd09-0410-ab3c-d52691b4dbfc